my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EASSIGN_25/T_EASSIGN_25-struct.h
/* Generated by dmlc, do not edit! */

#ifndef T_EASSIGN_25_STRUCT_H
#define T_EASSIGN_25_STRUCT_H

typedef struct eassign eassign_t;

conf_class_t *_initialize_T_EASSIGN_25(void);


#endif /* not T_EASSIGN_25_STRUCT_H */
